[package]
name = "homo-rs"
authors = ["Collide <three-dim-sky@foxmail.com>"]
version = "0.1.3"
description = "HOMO argumentator in Rust."
repository = "https://github.com/TD-Sky/homo-rs"
documentation = "https://docs.rs/homo-rs/latest/homo"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
once_cell = "1.13.1"
pomsky-macro = "0.6.0"
regex = "1.6.0"
uint = "0.9.3"

[lib]
name = "homo"

[[bin]]
name = "cli"
test = false
bench = false
