[package]
name = "homo-rs"
authors = ["Collide <three-dim-sky@foxmail.com>"]
version = "0.1.3"
description = "HOMO argumentator in Rust."
repository = "https://github.com/TD-Sky/homo-rs"
documentation = "https://docs.rs/homo-rs/latest/homo"
readme = "README.md"
license = "MIT"
edition = "2024"

[dependencies]
pomsky-macro = "0.11"
regex = "1"
uint = "0.10"

[lib]
name = "homo"
